# atls

./: Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: main.yml  pr.yml
src/: common.rs  log.rs  main.rs
src/domain/: fs_operation.rs  mod.rs  path.rs
src/services/: copy.rs  list.rs  mod.rs
src/services/testdata/: file-c.txt
src/tui/: app.rs  cmd.rs  common.rs  mod.rs  model.rs  msg.rs  update.rs  view.rs
src/tui/static/: help.txt
