[package]
name = "atls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
etcetera = "0.11.0"
fs_extra = "1.3.0"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.45.1", features = ["yaml"] }
