[package]
name = "atls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
etcetera = "0.11.0"
fs_extra = "1.3.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
